[package]
name = "mailgun_v3"
description = "reqwest based web bindings for Mailgun's v3 JSON API"
readme = "README.md"
repository = "https://github.com/otterandrye/mailgun_v3"
license = "MIT"
version = "0.10.0"
authors = ["Nathan Merritt <nathan@gnmerritt.net>"]
keywords = ["mailgun", "reqwest", "email", "api"]
categories = ["api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "otterandrye/mailgun_v3", branch = "master" }

[dependencies]
chrono = "0.4.19"
reqwest = { version = "0.10.10", features = ["json", "rustls-tls-webpki-roots"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"

# [dev-dependencies]
# mockito = "^0.23.1"
# tokio = { version = "^0.2.13", features = ["macros", "rt-threaded"] }
